BAU: Use helper method to create request in tests
Cleans up some noise in tests and makes it easier to see what's important to each individual test